cluster/seaweedfs/weed-files-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weed-filer
  namespace: seaweedfs
spec:
  selector:
    app: weed-filer
  ports:
    - name: http
      port: 8888
      targetPort: 8888
