cluster/seaweedfs/weed-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weed-master
  namespace: seaweedfs
spec:
  selector:
    app: weed-master
  ports:
    - name: http
      port: 9333
      targetPort: 9333
