cluster/seaweedfs/weed-s3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weed-s3
  namespace: seaweedfs
spec:
  selector:
    app: weed-s3
  ports:
    - name: http
      port: 8333
      targetPort: 8333
