cluster/seaweedfs/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seaweed-files-internal
  namespace: seaweedfs
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`files.local.net`)
      kind: Rule
      services:
        - name: sw-filer
          port: 8888
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seaweed-s3-internal
  namespace: seaweedfs
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`s3.local.net`)
      kind: Rule
      services:
        - name: sw-filer
          port: 8333
